# gas_accountant

./: .gitignore  README.md  curl.txt  dex_app.py  pyproject.toml  requirements.txt  trading_bots.py
AI/: prophet_model.pkl
abi/: staking_abi.json  vault_abi.json
cache/: cache.db  cache.db-shm  cache.db-wal
data/: current_sepolia_gas_metrics.csv  sepolia_gas_metrics.csv
gas_accountant/: __init__.py  apis.py  etherscan.py  sql.py  utils.py  web3_utils.py
notebooks/: eda.ipynb  trading_bots.ipynb
notebooks/.ipynb_checkpoints/: eda-checkpoint.ipynb  trading_bots-checkpoint.ipynb
python_scripts/: web3_utils.py
